list, invalid end handling

--- a/environments.example.toml
+++ b/environments.example.toml
@@ -9,3 +9,5 @@ stop = ["tobemodified"]
 description = "tobemodified"
 project-root = "tobemodified"
 technology = "tobemodified"
+start = ["tobemodified"]
+stop = ["tobemodified"]
